Tried something else to fix the spacing issue on the inputs

--- a/src/style/partials/_forms.scss
+++ b/src/style/partials/_forms.scss
@@ -15,6 +15,7 @@ label {
 	cursor: pointer;
 	max-width: 400px;
 	width: 95%;
+	margin-bottom: -10px;
 	input, select {
 		height: 50px;
 		max-width: 400px;
